--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "parcel ./src/index.html --public-url ./",
-    "build": "parcel build ./src/index.html --public-url ./"
+    "build": "rm ./dist/* & parcel build ./src/index.html --public-url ./"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
