--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.15.2",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "socket.io": "^1.7.3"
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "parcel ./src/index.html --public-url ./",
-    "build": "rm ./dist/* & parcel build ./src/index.html --public-url ./"
+    "dev": "parcel ./src/index.html ./src/login.html --public-url ./",
+    "build": "rm ./dist/* & parcel build ./src/index.html ./src/login.html --public-url ./",
+    "test-path": "node ./test/index.js"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
